# japper

./: .gitignore  Makefile  README.md  Untitled.ipynb  pyproject.toml
sample/: README.md  app.ipynb  demo_agenda.md  environment.yml  japper.yml
sample/app/: app_main.py
sample/app/assets/: custom.html
sample/app/commons/: __init__.py  config.py
sample/app/models/: __init__.py  features.py
sample/app/presenters/: __init__.py  features.py  home.py  widgets.py
sample/app/views/: __init__.py  features.py  home.py  widgets.py
sample/container/dev/: Dockerfile  docker-compose.yml  start.sh
sample/container/prod/: Dockerfile  docker-compose.yml  start.sh
sample/docs/app/: app_main.html  index.html
src/japper/: __init__.py  app_config.py  app_main_view.py  appmode.html  debug.py  global.html  japper_app_main.py  japper_events.py  page.py  page_controller.py  page_view.py  style.py  style_old.py  utils.py  vue_widget_logger.py  widget_wrapper.py
src/japper/widgets/: __init__.py  fileupload.py  fileupload.vue  loading_dialog.py  navigation_menu.py  popup_alert.py  toast_alert.py
src/japper_devtools/: __init__.py  __main__.py  project_init.py  utils.py
src/japper_devtools/forge/: app.ipynb  voila.json
src/japper_devtools/static/: gitignore
src/japper_devtools/templates/: README.md.jinja2  app.app_config.yml.jinja2  app.app_main.py.jinja2  app.commons.__init__.py.jinja2  app.commons.config.py.jinja2  app.controllers.__name__.py.jinja2  app.controllers.home.py.jinja2  app.ipynb.jinja2  app.models.__name__.py.jinja2  app.models.home.py.jinja2  app.views.__name__.py.jinja2  app.views.home.py.jinja2  container.__name__.docker-compose__name__.yml.jinja2  (+2 more)
(+66 files in other folders)
